[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/FlagPole.gd" type="Script" id=1]
[ext_resource path="res://sprites/flag.png" type="Texture" id=2]
[ext_resource path="res://sprites/flag_top.png" type="Texture" id=3]
[ext_resource path="res://SFX/Sounds/smb_stage_clear.wav" type="AudioStream" id=4]
[ext_resource path="res://SFX/Sounds/smb_flagpole.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.5, 60 )

[sub_resource type="Animation" id=2]
resource_name = "drop"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -8, -64 ), Vector2( -8, 55 ) ]
}

[node name="FlagPole" type="Area2D"]
collision_layer = 64
script = ExtResource( 1 )
local_position = Vector2( 48, 36 )

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
margin_left = -1.0
margin_top = -70.0
margin_right = 1.0
margin_bottom = 70.0
color = Color( 0.517647, 0.827451, 0.0627451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Top" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]
visible = false
show_behind_parent = true
position = Vector2( -8, -64 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 0, -75 )
texture = ExtResource( 3 )

[node name="StageClear" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Slide" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/drop = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_FlagPole_body_entered"]
